--- a/style.css
+++ b/style.css
@@ -350,8 +350,8 @@ footer{
 }
 
 .social-networks img{
-    width: 1.75rem;
-    margin: 0 1.5rem;
+    width: 7.5vw;
+    margin: 0 10vw;
 }
 
 /*---------- Responsive ----------*/
@@ -577,11 +577,11 @@ footer{
         padding: 2.75rem 15vw 1rem 15vw;
         margin-top: -1.75rem;
         z-index: 45;
+        justify-content: space-between;
         width: 70vw;
     }
 
     .social-networks img{
         width: 2.5rem;
-        margin: 0 3rem;
     }
 }
