--- a/style.css
+++ b/style.css
@@ -335,6 +335,7 @@ footer{
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+    border: none;
 }
 
 .social-networks{
